Implemented chat with the author without the voice message option

--- a/style.css
+++ b/style.css
@@ -132,6 +132,18 @@ body {
   margin-top: 63px;
 }
 
+.map_box {
+  min-height: 200px;
+  margin-top: 63px;
+  margin-bottom: 40px;
+}
+
+.map_div {
+  margin-top: 30px;
+  min-width: 50px;
+  min-height: 500px;
+}
+
 .content_for {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
@@ -570,11 +582,8 @@ ol {
   /* убираем фон */
   border: none;
   /* рамка */
-  -webkit-appearance: none;
   /* Chrome */
-  -moz-appearance: none;
   /* Firefox */
-  appearance: none;
   /* убираем дефолнтные стрелочки */
   font-family: inherit;
   /* наследует от родителя */
@@ -589,7 +598,6 @@ ol {
   right: 15px;
   z-index: 1;
   margin-top: -3px;
-  background-image: url(image/select.svg);
   width: 20px;
   height: 11px;
   background-repeat: no-repeat;
@@ -717,12 +725,149 @@ h5 {
   }
 }
 /*Корзина*/
-/*
-<picture>
-<source media="(max-width: 767px)" srcset="photo-mobile.jpg">
-<source media="(min-width: 768px)" srcset="photo-big.jpg">
-<img src="photo-big.jpg" alt="photo">
-</picture>*/
+.chat_section {
+  display: flex;
+  position: fixed;
+  top: 80px;
+  right: 10px;
+  min-width: 300px;
+  min-height: 500px;
+  border-radius: 20px;
+  justify-content: space-around;
+  flex-direction: column;
+}
+.chat_div {
+  padding-top: 10px;
+  padding-left: 15px;
+  padding-bottom: 10px;
+  padding-right: 10px;
+  border-radius: 20px;
+  background-color: rgb(255, 255, 255);
+  border: 1px solid #C4C4C4;
+  min-height: 400px;
+  min-width: 200px;
+  width: inherit;
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  align-items: center;
+}
+
+.input_box {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.chat_text_div {
+  min-width: 200px;
+  width: inherit;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.chat_text_answers {
+  width: 300px;
+  min-height: 50px;
+  min-width: 50px;
+}
+
+.bubble {
+  background: #a2bde3;
+  border: 1px solid #ffffff;
+  border-radius: 8px;
+  padding: 4px 7px 4px 7px;
+}
+.bubble_right {
+  background: #bcd7ff;
+}
+
+.left {
+  width: inherit;
+  display: flex;
+  justify-content: flex-start;
+  margin-bottom: 5px;
+}
+
+.right {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 5px;
+}
+
+.chat_button {
+  min-width: 50px;
+  min-height: 46px;
+  background: #7DA0D2;
+  border: 1px solid #ffffff;
+  border-radius: 15px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 18px;
+  color: #ffffff;
+  padding-left: 5px;
+  padding-right: 5px;
+  transition: all 0.3s;
+}
+.chat_button:hover {
+  color: #FFFFFF;
+  background: #000000;
+}
+
+.chat_micro {
+  font-size: 25px;
+}
+
+.is-recording {
+  background: #ff0000;
+}
+
+.close {
+  transition: all 0.2s;
+}
+.close:hover {
+  color: #6a6a6a;
+  background: #ffffff;
+}
+
+.chat_input {
+  height: 46px;
+  color: #050505;
+  background: #FFFFFF;
+  border: 1px solid #C4C4C4;
+  border-radius: 15px;
+  box-sizing: border-box;
+  padding-left: 25px;
+  padding-right: 25px;
+  margin-bottom: 12px;
+}
+.chat_input::-moz-placeholder {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+}
+.chat_input::placeholder {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.chat_closed {
+  display: none;
+}
+
+.chat_window_closed {
+  min-height: -moz-min-content;
+  min-height: min-content;
+}
+
+.hidden {
+  display: none;
+}
 @keyframes heartbeat {
   from {
     transform: scale(1);
