Implemented voice message option and key-words answers

--- a/style.css
+++ b/style.css
@@ -820,10 +820,6 @@ h5 {
   font-size: 25px;
 }
 
-.is-recording {
-  background: #ff0000;
-}
-
 .close {
   transition: all 0.2s;
 }
@@ -871,6 +867,10 @@ h5 {
 
 .hidden {
   display: none;
+}
+
+.is_recording {
+  background: #ff0000;
 }
 @keyframes heartbeat {
   from {
